; ModuleID = '/home/carl/AnghaBench/mpv/misc/extr_dispatch.c_mp_dispatch_interrupt.c'
source_filename = "/home/carl/AnghaBench/mpv/misc/extr_dispatch.c_mp_dispatch_interrupt.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.mp_dispatch_queue = type { i32, i32, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @mp_dispatch_interrupt(%struct.mp_dispatch_queue* %0) #0 {
  %2 = alloca %struct.mp_dispatch_queue*, align 8
  store %struct.mp_dispatch_queue* %0, %struct.mp_dispatch_queue** %2, align 8
  %3 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %2, align 8
  %4 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %3, i32 0, i32 1
  %5 = call i32 @pthread_mutex_lock(i32* %4)
  %6 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %2, align 8
  %7 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %6, i32 0, i32 0
  store i32 1, i32* %7, align 4
  %8 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %2, align 8
  %9 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %8, i32 0, i32 2
  %10 = call i32 @pthread_cond_broadcast(i32* %9)
  %11 = load %struct.mp_dispatch_queue*, %struct.mp_dispatch_queue** %2, align 8
  %12 = getelementptr inbounds %struct.mp_dispatch_queue, %struct.mp_dispatch_queue* %11, i32 0, i32 1
  %13 = call i32 @pthread_mutex_unlock(i32* %12)
  ret void
}

declare dso_local i32 @pthread_mutex_lock(i32*) #1

declare dso_local i32 @pthread_cond_broadcast(i32*) #1

declare dso_local i32 @pthread_mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
